# yaar

./: .gitignore  .prettierignore  AGENTS.md  CLAUDE.md  CODEX_CLI_TIPS.md  LICENSE  Makefile  README.en.md  README.md  Self Inspection Report (Verb Mode).md  beta_release_plan.md  dedup.md  install.ps1  install.sh  issue.md  issues.md  lessons.md  milestone_claude.md  milestone_claude2.md  milestone_codex.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  proposal.md  pyproject.toml  questions.md  remote_plan.md  report.md  sqlite-plan.md  suggestion.md  suggestions.md  system_app_plan.md  verbalized-with-uri.md  what.md
apps/: tsconfig.json
backend/: __init__.py  main.py
bundled/: .gitkeep  README.md
docs/: app-development.md  app_dedicated_mcp.md  app_protocol_reference.md  beta_grounding_next.md  beta_grounding_suggestions.md  claude_codex.md  codex-app-server-plan.md  codex_protocol.md  common_flow.ko.md  common_flow.md  devtools_roadmap.md  example_hook.json  example_hooks.json  gpt-5.3-instant-20260304.md  hooks.md  main_orchestrator.md  mcp-resource.md  mcp-sdk-upgrade-patch.md  migration_note.md  migrations.md  monitor_and_windows_guide.md  openapi.yaml  os_actions_reference.md  os_architecture.md  parallel_capability.md  plan-browser-verb-removal.md  proposal-app-agents.md  proposal.md  remote_mode.md  session-agent.md  storage_api_reference.md  takeaways.md  uri-based-access.md  v1_plan.md  verbalized-with-uri.md
frontend/: package-lock.json  package.json
scripts/: build-exe-bundle.js  copy-exe-assets.js  dev-windows.ps1  (+6 more)
(+442 files in other folders)
